<?xml version="1.0"?>
<package format="2">
  <name>actionlib_sample</name>
  <version>0.0.0</version>
  <description>The test_pkg package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
</package>
